--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.9.3",
+    "moment": "^2.30.1",
+    "mongoose": "^8.7.1",
+    "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
+    "react-datepicker": "^7.4.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
